--- a/app/templates/edit_schools.html
+++ b/app/templates/edit_schools.html
@@ -1,35 +1,43 @@
 {% extends "base.html" %}
 {% block content %}
 
-<!-- insert flash message -->
-{% if flash_messages %}
-    {% for message in flash_messages %}
-        <div class="alert alert-info" role="alert">
-            {{ message }}
-        </div>
-    {% endfor %}
-{% endif %}
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <ul class="flashes">
+            {% for category, message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
+
 <h1>Edit School</h1>
 <form method="POST" enctype="multipart/form-data">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" value="{{ school.name }}" required><br><br>
-    
-    <label for="address">Address:</label>
-    <input type="text" id="address" name="address" value="{{ school.address }}"><br><br>
-    
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" value="{{ school.email }}" required><br><br>
-    
-    <label for="phone_number">Phone Number:</label>
-    <input type="text" id="phone_number" name="phone_number" value="{{ school.phone_number }}"><br><br>
-    
-    <label for="website">Website:</label>
-    <input type="text" id="website" name="website" value="{{ school.website }}"><br><br>
-    
-    <label for="school_logo">School Logo:</label>
-    <input type="file" id="school_logo" name="school_logo"><br><br>
-    
-    <button type="submit">Update</button>
-</form>
+    {{ form.csrf_token }}  {{ form.name.label }} {{ form.name(class="form-control") }}
+    {% if form.name.errors %}
+        <ul class="errors">
+            {% for error in form.name.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    <br><br>
+
+    {{ form.address.label }} {{ form.address(class="form-control") }}<br><br>
+    {{ form.email.label }} {{ form.email(class="form-control") }}
+    {% if form.email.errors %}
+        <ul class="errors">
+            {% for error in form.email.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    <br><br>
+    {{ form.phone_number.label }} {{ form.phone_number(class="form-control") }}<br><br>
+    {{ form.website.label }} {{ form.website(class="form-control") }}<br><br>
+    {{ form.school_logo.label }} {{ form.school_logo }}<br><br>
+
+    {{ form.submit(class="btn btn-primary") }}  </form>
 <a href="{{ url_for('main.schools') }}">Back to List</a>
-    {% endblock %}
+
+{% endblock %}
