--- a/app/templates/register_school.html
+++ b/app/templates/register_school.html
@@ -1,14 +1,83 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Register School</h1>
-    <form method="POST" enctype="multipart/form-data">  {{ form.hidden_tag() }}
-        <p>{{ form.name.label }} {{ form.name(class="form-control") }}</p>
-        <p>{{ form.address.label }} {{ form.address(class="form-control") }}</p>
-        <p>{{ form.email.label }} {{ form.email(class="form-control") }}</p>
-        <p>{{ form.phone_number.label }} {{ form.phone_number(class="form-control") }}</p>
-        <p>{{ form.website.label }} {{ form.website(class="form-control") }}</p>
 
-        <p>{{ form.school_logo.label }} {{ form.school_logo(type="file", class="form-control-file") }}</p>  
+    <h1>Register School</h1>
+
+    {% with messages = get_flashed_messages(with_categories=true) %}  {% if messages %}
+            {% for category, message in messages %}  <div class="alert alert-{{ category }}" role="alert">  {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
+    <form method="POST" enctype="multipart/form-data">
+        {{ form.hidden_tag() }}
+        <div class="form-group">  {{ form.name.label(class="form-label") }}  {{ form.name(class="form-control") }}
+            {% if form.name.errors %}  <ul class="errors">
+                    {% for error in form.name.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+        <div class="form-group">
+            {{ form.address.label(class="form-label") }}
+            {{ form.address(class="form-control") }}
+            {% if form.address.errors %}
+                <ul class="errors">
+                    {% for error in form.address.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+        <div class="form-group">
+            {{ form.email.label(class="form-label") }}
+            {{ form.email(class="form-control") }}
+            {% if form.email.errors %}
+                <ul class="errors">
+                    {% for error in form.email.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+        <div class="form-group">
+            {{ form.phone_number.label(class="form-label") }}
+            {{ form.phone_number(class="form-control") }}
+            {% if form.phone_number.errors %}
+                <ul class="errors">
+                    {% for error in form.phone_number.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+        <div class="form-group">
+            {{ form.website.label(class="form-label") }}
+            {{ form.website(class="form-control") }}
+            {% if form.website.errors %}
+                <ul class="errors">
+                    {% for error in form.website.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+        <div class="form-group">
+            {{ form.school_logo.label(class="form-label") }}
+            {{ form.school_logo(type="file", class="form-control-file") }}
+            {% if form.school_logo.errors %}
+                <ul class="errors">
+                    {% for error in form.school_logo.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+
+
         <p>{{ form.submit(class="btn btn-primary") }}</p>
     </form>
+
 {% endblock %}
