--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -1,50 +1,45 @@
 {% extends "base.html" %}
-
 {% block content %}
 <h2>Classes</h2>
 
-<!-- Classes Table -->
-{% if classes %}
-<table class="table table-striped">
+<a href="{{ url_for('main.add_class') }}" class="btn btn-primary mt-3">Add New Class</a>
+
+<table class="table table-bordered mt-3">
     <thead>
         <tr>
             <th>ID</th>
-            <th>Class Name</th>
-            <th>Class Category</th>
-            <th>Number of Students</th>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Level</th>
+            <th>Students</th>
             <th>Teachers</th>
             <th>Actions</th>
         </tr>
     </thead>
     <tbody>
-        {% for class, student_count in classes %}
-        <tr>
-            <td>{{ class.id }}</td>
-            <td>{{ class.class_name }}</td>
-            <td>{{ class.class_category }}</td>
-            <td>{{ student_count }}</td>  <!-- Student count -->
-            <td>
-                {% if class.teachers %}
-                {% for teacher in class.teachers %}
-                    {{ teacher.first_name }} {{ teacher.last_name }}
-                    {% if not loop.last %}, {% endif %}
-                {% endfor %}
-                {% else %}
-                Not Assigned
-                {% endif %}
-            </td>
-            <td>
-                <a href="{{ url_for('main.edit_class', class_id=class.id) }}">Edit</a> |
-                <a href="{{ url_for('main.delete_class', class_id=class.id) }}" onclick="return confirm('Are you sure you want to delete this class?')">Delete</a>
-            </td>
-        </tr>
-        {% endfor %}
+        {% if classes %}
+            {% for item in classes %}  <tr>
+                    <td>{{ item.class.id }}</td>  <td>{{ item.class.class_name }}</td>
+                    <td>{{ item.class.class_category }}</td>
+                    <td>{{ item.class.class_level }}</td>
+                    <td>{{ item.student_count }}</td>  <td>
+                        {% for teacher in item.class.teachers %}  {{ teacher.first_name }} {{ teacher.last_name }}{% if not loop.last %}, {% endif %}
+                        {% endfor %}
+                    </td>
+                    <td>
+                        <a href="{{ url_for('main.edit_class', class_id=item.class.id) }}" class="btn btn-primary btn-sm">Edit</a>
+                        <form method="POST" action="{{ url_for('main.delete_class', class_id=item.class.id) }}" style="display: inline;">
+                            <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this class?')">Delete</button>
+                        </form>
+                    </td>
+                </tr>
+            {% endfor %}
+        {% else %}
+            <tr>
+                <td colspan="7" class="text-center">No classes found.</td>
+            </tr>
+        {% endif %}
     </tbody>
 </table>
-{% else %}
-<p>No classes available. <a href="{{ url_for('main.add_class') }}">Add a new class</a>.</p>
-{% endif %}
-
-<a href="{{ url_for('main.add_class') }}" class="btn btn-primary mt-3">Add New Class</a>
 
 {% endblock %}
