--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+    <div class="container-fluid justify-content-center">
         <a class="navbar-brand" href="{{ url_for('main.dashboard') }}">
             {% if g.school_name %}
                 {{ g.school_name }}
             {% else %}
-                School Portal  
+                School Managment Portal 
             {% endif %}
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <!-- Home Link (Visible to All) -->
                 <li class="nav-item">
